[package]
name = "rust-mongo-example"
version = "0.1.0"
authors = ["Mehmet Sefa Balık <mehmetsefabalik@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
actix-web = "3.3.3"
actix-rt = "1"
bson = "0.14.0"
serde = "1.0.103"
futures = "0.3.4"
serde_json = "1"
actix-cors = "0.5.4"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["async-std-runtime"]